When dragging a window around overview, reposition overview windows.

When dragging a window from caption area in tablet mode, overview will
open behind the dragged windows. When the dragged window is dragged into
the preview split area, we should update the overview grid's bounds and
also update the new selector item's visibility.

See recorded video:
https://drive.google.com/open?id=10gPVG1Wlgt4YDnZI_tPS2p6JJGYJ-ztl

Bug: 873292
Change-Id: Ibc7028820bed11d61bdbb376fdc6723c26a0c262
Reviewed-on: https://chromium-review.googlesource.com/1176220
Commit-Queue: Xiaoqian Dai <xdai@chromium.org>
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583696}
Former-commit-id: fcab234783a396391ce97a62ec6c8849ebb8d01f